# siphon-ai

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  fs-bridge.pcap  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yml  test.yml
bins/siphon-ai/: Cargo.toml
bins/siphon-ai/pkg/: config.toml  postinst  postrm  prerm  siphon-ai.service
bins/siphon-ai/src/: inspect.rs  lib.rs  main.rs  otel.rs  registration.rs  reload.rs  runtime.rs
bins/siphon-ai/src/fixtures/: reload_cert_a.pem  reload_cert_b.pem  reload_key_a.pem  reload_key_b.pem
bins/siphon-ai/tests/: cli.rs  decrypt_recording.rs  startup.rs
bins/siphon-ai/tests/fixtures/: local-dev.toml
configs/: local-dev.toml  soak.toml  trunk-403-test.toml
contrib/: README.md  sti-pa-roots.pem
crates/audit/: Cargo.toml
crates/audit/src/: event.rs  facade.rs  file.rs  http.rs  lib.rs  sink.rs
crates/bridge/: Cargo.toml
crates/bridge/examples/: gen_schema.rs
crates/bridge/src/: audio.rs  conn.rs  lib.rs  protocol.rs  tls.rs
crates/bridge/src/testdata/: spki_sample.der
crates/bridge/tests/: connection.rs
crates/cdr/: Cargo.toml
crates/cdr/src/: csv.rs  file.rs  hep.rs  lib.rs  schema.rs  sink.rs  webhook.rs
crates/config/: Cargo.toml
crates/config/src/: compile.rs  env.rs  lib.rs  raw.rs
crates/config/tests/: load.rs
crates/core/: Cargo.toml
crates/core/src/: acceptor.rs  call.rs  conference.rs  conference_admin.rs  hold.rs  lib.rs  outbound.rs  outbound_service.rs  park.rs  park_admin.rs  quality_live.rs  registry.rs  transfer.rs
crates/core/tests/: acceptor_cdr.rs  acceptor_metrics.rs  acceptor_prepare.rs  acceptor_webhooks.rs  controller_lifecycle.rs  hold_resume.rs  registry_bye.rs
crates/core/tests/common/: mod.rs
crates/http/: Cargo.toml
crates/http/src/: kms.rs  lib.rs  s3.rs  sigv4.rs  upload.rs
crates/http/tests/: kms_live.rs  s3_live.rs
crates/media-glue/: Cargo.toml
crates/media-glue/src/: idle.rs  lib.rs  moh.rs  room.rs  rtp_stats.rs  sdp.rs  setup.rs  tap.rs
crates/media-glue/tests/: loopback.rs  sdp_negotiation.rs  setup.rs  tap.rs
crates/media-glue/tests/common/: mod.rs
crates/protocol-testkit/: Cargo.toml
crates/protocol-testkit/scenarios/: barge-in-pause.toml  basic-echo.toml  dtmf.toml  hangup-semantics.toml  keepalive.toml  recording-controls.toml
crates/protocol-testkit/src/: client.rs  main.rs  report.rs  runner.rs  scenario.rs  validate.rs
crates/quality/: Cargo.toml
crates/quality/src/: facade.rs  file.rs  http.rs  lib.rs  record.rs  sink.rs
crates/recording/: Cargo.toml
crates/recording/src/: config.rs  control.rs  envelope.rs  frame.rs  kek.rs  lib.rs  opus.rs  writer.rs
crates/routes/: Cargo.toml
crates/routes/src/: call_info.rs  compile.rs  compiled.rs  lib.rs  raw.rs
crates/routes/src/testdata/: README.md  client_cert.pem  client_key.pem
crates/routes/tests/: match_grammar.rs
crates/security/: Cargo.toml
crates/security/src/: attestation.rs  config.rs  lib.rs  policy.rs  verstat.rs
crates/sip-glue/: Cargo.toml
crates/sip-glue/src/: admission.rs  dialog.rs  digest.rs  drain.rs  handler.rs  invite.rs  lib.rs  register.rs  route.rs
crates/sip-glue/tests/: handler_dispatch.rs  invite_routing.rs
crates/stir-shaken/: Cargo.toml
crates/stir-shaken/examples/: gen_test_passport.rs
crates/stir-shaken/src/: cache.rs  fetch.rs  lib.rs  pem.rs  verifier.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: admin.rs  auth.rs  hep.rs  http.rs  lib.rs  log_filter.rs  metrics.rs  otel.rs  readiness.rs
crates/webhooks/: Cargo.toml
crates/webhooks/src/: event.rs  http.rs  lib.rs  sink.rs
docker/: Dockerfile  Dockerfile.release  compose.yaml  local-dev.toml
docs/: AUDIT.md  BOT_LOCALHOST_SETUP.md  CONFERENCE.md  CONFIG.md  CONFORMANCE.md  DEPLOY.md  DESIGN_DELAYED_OFFER.md  DESIGN_HOLD.md  DESIGN_OPUS.md  DESIGN_WEBHOOK_DURABILITY.md  DESIGN_WS_RECONNECT.md  DEV_PLAN.md  DEV_PLAN_0.2.0.md  DEV_PLAN_0.3.0.md  DEV_PLAN_0.4.0.md  DEV_PLAN_0.4.1.md  DEV_PLAN_0.5.0.md  DEV_PLAN_0.6.0.md  DIALPLAN.md  EXAMPLES.md  FREESWITCH_INTEGRATION.md  HEP.md  INSTALL_DEBIAN13.md  INTEGRATIONS_TWILIO.md  OPERATIONS.md  OUTBOUND.md  PARK.md  PROTOCOL.md  RECORDING.md  REGISTRATION.md  ROADMAP.md  SECURITY_FAIL2BAN.md  SECURITY_STIR_SHAKEN.md  SPIKE_MEDIA_TAP.md
docs/design/: DESIGN_0.7.0_PARK.md  DESIGN_ADMIN_AUTH.md  DESIGN_CONFIG_CLI.md  DESIGN_DELAYED_OFFER.md  DESIGN_ERROR_SIGNALING.md  DESIGN_GRACEFUL_SHUTDOWN.md  DESIGN_HOLD.md  DESIGN_METRICS_AUTH.md  DESIGN_OBSERVABILITY.md  DESIGN_OPUS.md  DESIGN_PROTOCOL_SDKS.md  DESIGN_QUALITY_TELEMETRY.md  DESIGN_RECORDING_COMPLIANCE.md  DESIGN_REGISTRATION_ADMIN.md  DESIGN_RELEASE_PACKAGING.md  DESIGN_REVERSIBLE_BARGE_IN.md  DESIGN_SECURITY_HARDENING.md  DESIGN_WS_FAILURE_PROMPT.md  DESIGN_WS_LIVENESS.md  DESIGN_WS_RECONNECT.md  DEV_PLAN_0.2.0.md  DEV_PLAN_0.4.0.md  DEV_PLAN_0.5.0.md  DEV_PLAN_0.6.1.md  DEV_PLAN_0.7.0.md  README.md  SPIKE_MEDIA_TAP.md
examples/deepgram-llm-bot-node/: README.md  package.json  server.js
examples/deepgram-openai-bot-node/: README.md  package.json  server.js
examples/echo-ws-server-node/: README.md  package.json  server.mjs
examples/echo-ws-server-python/: .dockerignore  Dockerfile  README.md  requirements.txt  server.py  test_smoke.py
examples/homer-stack/: README.md  compose.yaml  siphon-ai-hep.toml
examples/observability/: README.md  compose.yaml  prometheus.yml  vector.toml
examples/openai-pipeline-bot-py/: Dockerfile  README.md  requirements.txt  server.py  test_smoke.py
examples/openai-realtime-bridge-py/: Dockerfile  (+4 more)
schemas/: siphon-ai.v1.json
scripts/: check-doc-links.py  check-observability-metrics.py  check-protocol-schema.py  check-version-consistency.py  extract-changelog.py  install-bot-debian13.sh  install-debian13.sh  install-fail2ban.sh
sdks/python/: README.md  pyproject.toml
sdks/python/src/siphon_ai_server/: __init__.py  audio.py  call.py  events.py  server.py
sdks/python/tests/: test_audio.py  test_events.py
test-harness/: FUNCTIONAL_TEST_PLAN.md
(+78 files in other folders)
