[workspace]
resolver = "2"
members = [
    "bins/siphon-ai",
    "crates/audit",
    "crates/bridge",
    "crates/cdr",
    "crates/config",
    "crates/core",
    "crates/http",
    "crates/media-glue",
    "crates/protocol-testkit",
    "crates/quality",
    "crates/recording",
    "crates/routes",
    "crates/security",
    "crates/stir-shaken",
    "crates/sip-glue",
    "crates/telemetry",
    "crates/webhooks",
]

[workspace.package]
version = "0.33.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["SiphonAI contributors"]
repository = "https://github.com/thevoiceguy/siphon-ai"
homepage = "https://github.com/thevoiceguy/siphon-ai"

[workspace.dependencies]
# Internal crates (used by bins/siphon-ai and cross-crate)
siphon-ai-audit       = { path = "crates/audit" }
siphon-ai-bridge      = { path = "crates/bridge" }
siphon-ai-cdr         = { path = "crates/cdr" }
siphon-ai-quality     = { path = "crates/quality" }
siphon-ai-config      = { path = "crates/config" }
siphon-ai-core        = { path = "crates/core" }
siphon-ai-http        = { path = "crates/http" }
siphon-ai-media-glue  = { path = "crates/media-glue" }
siphon-ai-recording   = { path = "crates/recording" }
siphon-ai-routes      = { path = "crates/routes" }
siphon-ai-security    = { path = "crates/security" }
siphon-ai-stir-shaken = { path = "crates/stir-shaken" }
siphon-ai-sip-glue    = { path = "crates/sip-glue" }
siphon-ai-telemetry   = { path = "crates/telemetry" }
siphon-ai-webhooks    = { path = "crates/webhooks" }

# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec"] }
futures     = "0.3"
async-trait = "0.1"

# Errors
anyhow    = "1"
thiserror = "1"

# Serde / formats
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Bytes / encoding
bytes  = "1"
base64 = "0.22"

# Recording Opus/Ogg output (0.25.0, DESIGN_RECORDING_COMPLIANCE §5 D4):
# `ogg` is the theme's one new small dep; audiopus is already in-tree
# via forge-engine's opus feature (same version — no duplicate build).
ogg      = "0.9"
audiopus = "0.3.0-rc.0"

# JSON Schema generation for the WS protocol (0.27.0, DESIGN_PROTOCOL_SDKS
# §2 D1): dev-path only — pulled in solely by the `json-schema` feature on
# siphon-ai-bridge/-security; the daemon binary never carries it.
schemars = "1.2"

# Crypto (HMAC for webhook signing; SHA-256 + constant-time eq for
# admin token auth; AES-GCM + zeroize for recording encryption-at-rest —
# both already in-tree transitively via rustls, promoted to direct for
# DESIGN_RECORDING_COMPLIANCE §2)
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
aes-gcm = "0.10"
zeroize = "1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# tokio-rustls: only used to name the `ServerConfig` type returned
# by `sip_transport::load_rustls_server_config` so the daemon can
# pass it around. Already pulled transitively by sip-transport's
# `tls` feature; declaring it here just gives us a name.
tokio-rustls = "0.26"

# HTTP client (CDR webhook sink, lifecycle webhooks)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Admin / health HTTP server
hyper      = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Tracing / metrics
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json"] }
metrics                     = "0.24"
metrics-exporter-prometheus = "0.18"

# Match / parse
regex = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
parking_lot = "0.12"
once_cell   = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# ─── Upstream voice stack (separate repos, owned by us) ──────────────────────
# These are git deps for now; once published to crates.io we'll switch to
# versioned releases. Pinned to specific commit revs for reproducibility —
# `branch = "main"` would mean a tagged release could build different code
# later if upstream moves. To bump, run `git ls-remote` for the upstream's
# main branch and replace the rev hashes here (see CLAUDE.md §7.5).

# siphon-rs — RFC 3261 SIP stack
sip-core        = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-parse       = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-transport   = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9", features = ["tls"] }
sip-transaction = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-dialog      = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-uas         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-uac         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-auth        = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-dns         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
# sip-sdp — the SAME sip-sdp sip-uac's SdpAnswerGenerator trait speaks
# (distinct from forge-media's pinned sip-sdp). Used by the outbound
# delayed-offer answer generator to hand the UAC a SessionDescription it
# accepts. Must stay on the same siphon-rs rev as the rest below.
sip-sdp         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
sip-hep         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }
# sip-identity — STIR/SHAKEN Identity-header parsing + PASSporT verification
# (ES256 + X.509 chain validation). Consumed by the stir-shaken verifier crate.
sip-identity    = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "f3454c77c3d9" }

# forge-media — RTP / codecs / SDP / DTMF / engine.
#
# We disable forge-engine's default features and re-enable only `g722`, which
# drops the `forge-ai-stream` transitive dep (and through it OpenAI / Anthropic
# / Deepgram / ElevenLabs WebSocket clients). SiphonAI is provider-neutral —
# AI logic belongs in the WS server, never here. See CLAUDE.md §4.1 and the
# upstream gate at https://github.com/thevoiceguy/forge-media/pull/39.
#
# forge-media is pinned to a `main` rev. Bumped 2026-07-14 to 3c59b5f6e464
# = forge-media #82-#85: siphon-rs lockstep bumps + dependency
# migrations (rand 0.10, aes 0.9/aes-gcm 0.11/cipher 0.5 for SRTP,
# openssl 0.10.81, metrics 0.24 — our own `metrics`/exporter versions
# move in the same commit so forge and siphon-ai share one facade).
# siphon-rs bumped in lockstep to f3454c77c3d9 = #61 (SECURITY:
# registration-hijack auth bypass + remote parser panics) + #62
# (rand 0.10). (Prior pins: forge 5fa76fb38675 = #81, siphon-rs
# 83523662848d.)
forge-core    = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
forge-rtp     = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
forge-engine  = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464", default-features = false, features = ["g722", "dtls", "opus"] }
forge-codecs  = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
forge-sdp     = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
forge-dtmf    = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
forge-vad     = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
forge-hep     = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
# Conference rooms (0.7.0): forge-mixer is the per-room AudioMixer;
# forge-injection provides ToneGenerator (join/leave tones now, MOH
# for park later). Deliberately NOT forge-conference — its DTMF
# IVR/PIN/host-control layer is unused per DEV_PLAN_0.7.0.md §9.4.
forge-mixer     = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }
forge-injection = { git = "https://github.com/thevoiceguy/forge-media", rev = "3c59b5f6e464" }

# hep-rs — HEP3 codec, transport, HepSink trait. Owned by the same
# author as siphon-rs and forge-media; lives in its own repo.
#
# Kept on `branch = "main"` (NOT rev-pinned) on purpose: both
# siphon-rs and forge-media depend on hep-rs as `branch = "main"`,
# so pinning a `rev` here would create two distinct source URLs in
# the dep graph (`?rev=X` vs `?branch=main`) — cargo treats those
# as different crates, causing the classic "two different versions
# of crate `hep_rs` are being used" build error.
# Reproducibility for hep-rs is still enforced via the checked-in
# Cargo.lock entry (`source = git+…hep-rs?branch=main#<commit>`).
hep-rs = { git = "https://github.com/thevoiceguy/hep-rs", branch = "main" }

[profile.release]
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.dev]
# Keep dev builds fast; the audio hot path is profiled in release.
opt-level = 0
debug     = true
