[workspace]
resolver = "2"
members = [
    "bins/siphon-ai",
    "crates/audit",
    "crates/bridge",
    "crates/cdr",
    "crates/config",
    "crates/core",
    "crates/http",
    "crates/media-glue",
    "crates/protocol-testkit",
    "crates/quality",
    "crates/recording",
    "crates/routes",
    "crates/security",
    "crates/stir-shaken",
    "crates/sip-glue",
    "crates/telemetry",
    "crates/webhooks",
]

[workspace.package]
version = "0.39.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["SiphonAI contributors"]
repository = "https://github.com/thevoiceguy/siphon-ai"
homepage = "https://github.com/thevoiceguy/siphon-ai"

[workspace.dependencies]
# Internal crates (used by bins/siphon-ai and cross-crate)
siphon-ai-audit       = { path = "crates/audit" }
siphon-ai-bridge      = { path = "crates/bridge" }
siphon-ai-cdr         = { path = "crates/cdr" }
siphon-ai-quality     = { path = "crates/quality" }
siphon-ai-config      = { path = "crates/config" }
siphon-ai-core        = { path = "crates/core" }
siphon-ai-http        = { path = "crates/http" }
siphon-ai-media-glue  = { path = "crates/media-glue" }
siphon-ai-recording   = { path = "crates/recording" }
siphon-ai-routes      = { path = "crates/routes" }
siphon-ai-security    = { path = "crates/security" }
siphon-ai-stir-shaken = { path = "crates/stir-shaken" }
siphon-ai-sip-glue    = { path = "crates/sip-glue" }
siphon-ai-telemetry   = { path = "crates/telemetry" }
siphon-ai-webhooks    = { path = "crates/webhooks" }

# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec"] }
futures     = "0.3"
async-trait = "0.1"

# Errors
anyhow    = "1"
thiserror = "1"

# Serde / formats
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Bytes / encoding
bytes  = "1"
base64 = "0.22"

# Recording Opus/Ogg output (0.25.0, DESIGN_RECORDING_COMPLIANCE §5 D4):
# `ogg` is the theme's one new small dep; audiopus is already in-tree
# via forge-engine's opus feature (same version — no duplicate build).
ogg      = "0.9"
audiopus = "0.3.0-rc.0"

# JSON Schema generation for the WS protocol (0.27.0, DESIGN_PROTOCOL_SDKS
# §2 D1): dev-path only — pulled in solely by the `json-schema` feature on
# siphon-ai-bridge/-security; the daemon binary never carries it.
schemars = "1.2"

# Crypto (HMAC for webhook signing; SHA-256 + constant-time eq for
# admin token auth; AES-GCM + zeroize for recording encryption-at-rest —
# both already in-tree transitively via rustls, promoted to direct for
# DESIGN_RECORDING_COMPLIANCE §2)
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
aes-gcm = "0.10"
zeroize = "1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# tokio-rustls: only used to name the `ServerConfig` type returned
# by `sip_transport::load_rustls_server_config` so the daemon can
# pass it around. Already pulled transitively by sip-transport's
# `tls` feature; declaring it here just gives us a name.
tokio-rustls = "0.26"

# HTTP client (CDR webhook sink, lifecycle webhooks)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Admin / health HTTP server
hyper      = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Tracing / metrics
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json"] }
metrics                     = "0.24"
metrics-exporter-prometheus = "0.18"

# Match / parse
regex = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
parking_lot = "0.12"
once_cell   = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# ─── Upstream voice stack (separate repos, owned by us) ──────────────────────
# These are git deps for now; once published to crates.io we'll switch to
# versioned releases. Pinned to specific commit revs for reproducibility —
# `branch = "main"` would mean a tagged release could build different code
# later if upstream moves. To bump, run `git ls-remote` for the upstream's
# main branch and replace the rev hashes here (see CLAUDE.md §7.5).

# siphon-rs — RFC 3261 SIP stack.
# Bumped 2026-07-21 `fcaff011f9c6` → `6fd432270bb8` = siphon-rs #67:
# `IntegratedUACBuilder::dialog_manager` — lets an embedder give the UAC and
# the UAS one shared dialog store. Required for siphon-ai #324: without it
# every outbound UAC owned a private store, so UAS dispatch answered the far
# end's in-dialog BYE with 481 and the outbound call never tore down. The
# setter is additive and optional (unset keeps the private store), so nothing
# else in the tree changes behaviour on this bump. Note the injection lands on
# the inner UserAgentClient helper as well as the handle — the confirmed
# dialog is registered by `process_invite_response` on the helper's manager,
# so a handle-only share would not have fixed anything.
# (Prior: `fcaff011f9c6` = #65 invite_with_from, siphon-ai #316;
#  `3a4fc312ade3` = #64 TLS-SNI-is-hostname, siphon-ai #312.)
sip-core        = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-parse       = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-transport   = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8", features = ["tls"] }
sip-transaction = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-dialog      = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-uas         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-uac         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-auth        = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-dns         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
# sip-sdp — the SAME sip-sdp sip-uac's SdpAnswerGenerator trait speaks
# (distinct from forge-media's pinned sip-sdp). Used by the outbound
# delayed-offer answer generator to hand the UAC a SessionDescription it
# accepts. Must stay on the same siphon-rs rev as the rest below.
sip-sdp         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
sip-hep         = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }
# sip-identity — STIR/SHAKEN Identity-header parsing + PASSporT verification
# (ES256 + X.509 chain validation). Consumed by the stir-shaken verifier crate.
sip-identity    = { git = "https://github.com/thevoiceguy/siphon-rs", rev = "6fd432270bb8" }

# forge-media — RTP / codecs / SDP / DTMF / engine.
#
# We disable forge-engine's default features and re-enable only `g722`, which
# drops the `forge-ai-stream` transitive dep (and through it OpenAI / Anthropic
# / Deepgram / ElevenLabs WebSocket clients). SiphonAI is provider-neutral —
# AI logic belongs in the WS server, never here. See CLAUDE.md §4.1 and the
# upstream gate at https://github.com/thevoiceguy/forge-media/pull/39.
#
# forge-media is pinned to a `main` rev. Bumped 2026-07-22 to 24e20ae1e8ac
# = forge-media #94: per-SSRC receive-side stream stats. `RxStreamStats` had
# no SSRC field and compared sequence numbers across sources that RFC 3550
# §8 gives independent sequence spaces; it now re-baselines when the SSRC
# changes, carrying prior streams' real loss forward. Fixes siphon-ai #330:
# a trunk that sends ringback as early media and switches SSRC at the answer
# left the baseline anchored in the ringback era, so `rx_packets_lost` came
# out as `ring_seconds x 50`, frozen for the call, pinning the transport MOS
# estimate to 1.0 on every call with a normal ring time — and feeding that
# into the CDR `quality` block and Homer's HEP QoS. No API change here; the
# counters this daemon already reads simply stop being wrong.
# Not fixed upstream and tracked as forge-media #95: the early-media packets
# are received but never counted at all, so `rx_packets_received` still
# undercounts by the ringback burst, and a trunk that keeps one SSRC across
# the answer would still mis-report loss.
# Feature-enabled builds need rustc >= 1.91 (tract 0.23) — our pinned
# toolchain is 1.95. (siphon-rs is pinned separately above; see its own
# comment for the current rev.) Prior forge pins: forge 1c996ae5fb4f = #86
# neural VAD; forge 3c59b5f6e464 = #82-#85 dependency migrations; forge
# 5fa76fb38675 = #81.
forge-core    = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
forge-rtp     = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
forge-engine  = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac", default-features = false, features = ["g722", "dtls", "opus", "neural-vad"] }
forge-codecs  = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
forge-sdp     = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
forge-dtmf    = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
forge-vad     = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
forge-hep     = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
# Conference rooms (0.7.0): forge-mixer is the per-room AudioMixer;
# forge-injection provides ToneGenerator (join/leave tones now, MOH
# for park later). Deliberately NOT forge-conference — its DTMF
# IVR/PIN/host-control layer is unused per DEV_PLAN_0.7.0.md §9.4.
forge-mixer     = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }
forge-injection = { git = "https://github.com/thevoiceguy/forge-media", rev = "24e20ae1e8ac" }

# hep-rs — HEP3 codec, transport, HepSink trait. Owned by the same
# author as siphon-rs and forge-media; lives in its own repo.
#
# Kept on `branch = "main"` (NOT rev-pinned) on purpose: both
# siphon-rs and forge-media depend on hep-rs as `branch = "main"`,
# so pinning a `rev` here would create two distinct source URLs in
# the dep graph (`?rev=X` vs `?branch=main`) — cargo treats those
# as different crates, causing the classic "two different versions
# of crate `hep_rs` are being used" build error.
# Reproducibility for hep-rs is still enforced via the checked-in
# Cargo.lock entry (`source = git+…hep-rs?branch=main#<commit>`).
hep-rs = { git = "https://github.com/thevoiceguy/hep-rs", branch = "main" }

[profile.release]
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.dev]
# Keep dev builds fast; the audio hot path is profiled in release.
opt-level = 0
debug     = true
