[package]
name        = "siphon-ai"
description = "SIP-to-WebSocket media bridge daemon."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "siphon_ai"
path = "src/lib.rs"

[[bin]]
name = "siphon-ai"
path = "src/main.rs"

[dependencies]
tokio.workspace            = true
anyhow.workspace           = true
async-trait.workspace      = true
bytes.workspace            = true
clap.workspace             = true
tracing.workspace          = true
tracing-subscriber.workspace = true

# Internal — the daemon composes every layer.
siphon-ai-bridge.workspace     = true
siphon-ai-cdr.workspace        = true
siphon-ai-config.workspace     = true
siphon-ai-core.workspace       = true
siphon-ai-media-glue.workspace = true
siphon-ai-routes.workspace     = true
siphon-ai-sip-glue.workspace   = true
siphon-ai-telemetry.workspace  = true
siphon-ai-webhooks.workspace   = true

# Upstream — siphon-rs (transport, transaction, UAS, parse).
sip-core.workspace        = true
sip-parse.workspace       = true
sip-transaction.workspace = true
sip-transport.workspace   = true
sip-uas.workspace         = true

# Upstream — forge-media (session manager, media bridge).
forge-core.workspace   = true
forge-engine.workspace = true
forge-rtp.workspace    = true

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt", "time", "net", "sync"] }
