[package]
name        = "siphon-ai"
description = "SIP-to-WebSocket media bridge daemon."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "siphon_ai"
path = "src/lib.rs"

[[bin]]
name = "siphon-ai"
path = "src/main.rs"

[dependencies]
tokio.workspace            = true
anyhow.workspace           = true
async-trait.workspace      = true
bytes.workspace            = true
clap.workspace             = true
tracing.workspace          = true
tracing-subscriber.workspace = true
chrono.workspace           = true
metrics.workspace          = true

# Internal — the daemon composes every layer.
siphon-ai-bridge.workspace     = true
siphon-ai-cdr.workspace        = true
siphon-ai-config.workspace     = true
siphon-ai-core.workspace       = true
siphon-ai-media-glue.workspace = true
siphon-ai-routes.workspace     = true
siphon-ai-sip-glue.workspace   = true
siphon-ai-telemetry.workspace  = true
siphon-ai-webhooks.workspace   = true

# Upstream — siphon-rs (transport, transaction, UAS, parse).
sip-core.workspace        = true
sip-parse.workspace       = true
sip-transaction.workspace = true
sip-transport.workspace   = true
sip-uas.workspace         = true
sip-uac.workspace         = true
sip-dns.workspace         = true

# tokio-rustls: name the ServerConfig type returned by
# sip_transport::load_rustls_server_config.
tokio-rustls.workspace = true

# rustls: pulled here only so `main()` can install a process-level
# `CryptoProvider` before any TLS code path fires. Without this,
# enabling `[sip.tls]` panics on startup with
# "Could not automatically determine the process-level
# CryptoProvider from Rustls crate features" — rustls 0.23+
# requires either a feature-selected provider OR an explicit
# install when both `aws-lc-rs` and `ring` end up in the dep
# graph (they do, transitively).
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# SIGHUP cert reload state (W5): the daemon holds an
# `Arc<ArcSwap<ServerConfig>>` shared between the listener accept
# loop and the SIGHUP handler. `arc-swap` rides in transitively via
# siphon-rs's sip-transport, but we declare it explicitly here so we
# can name the type.
arc-swap = "1"

# Upstream — forge-media (session manager, media bridge).
forge-core.workspace   = true
forge-engine.workspace = true
forge-rtp.workspace    = true

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt", "time", "net", "sync"] }
