[package]
name        = "siphon-ai"
description = "SIP-to-WebSocket media bridge daemon."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "siphon_ai"
path = "src/lib.rs"

[[bin]]
name = "siphon-ai"
path = "src/main.rs"

[dependencies]
tokio.workspace            = true
anyhow.workspace           = true
async-trait.workspace      = true
bytes.workspace            = true
clap.workspace             = true
tracing.workspace          = true
tracing-subscriber.workspace = true
chrono.workspace           = true
metrics.workspace          = true

# Internal — the daemon composes every layer.
siphon-ai-bridge.workspace     = true
siphon-ai-cdr.workspace        = true
siphon-ai-config.workspace     = true
siphon-ai-core.workspace       = true
siphon-ai-media-glue.workspace = true
siphon-ai-routes.workspace     = true
siphon-ai-sip-glue.workspace   = true
siphon-ai-stir-shaken.workspace = true
siphon-ai-telemetry.workspace  = true
siphon-ai-webhooks.workspace   = true

# Upstream — siphon-rs (transport, transaction, UAS, parse).
sip-core.workspace        = true
sip-parse.workspace       = true
sip-transaction.workspace = true
sip-transport.workspace   = true
sip-uas.workspace         = true
sip-uac.workspace         = true
sip-dns.workspace         = true

# tokio-rustls: name the ServerConfig type returned by
# sip_transport::load_rustls_server_config.
tokio-rustls.workspace = true

# rustls: pulled here only so `main()` can install a process-level
# `CryptoProvider` before any TLS code path fires. Without this,
# enabling `[sip.tls]` panics on startup with
# "Could not automatically determine the process-level
# CryptoProvider from Rustls crate features" — rustls 0.23+
# requires either a feature-selected provider OR an explicit
# install when both `aws-lc-rs` and `ring` end up in the dep
# graph (they do, transitively).
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# Client-side TLS verification roots for outgoing connections
# (gateways / registrations with transport = "tls"). Both already
# in the dependency tree transitively.
webpki-roots = "1"
rustls-pemfile = "2"

# SIGHUP cert reload state (W5): the daemon holds an
# `Arc<ArcSwap<ServerConfig>>` shared between the listener accept
# loop and the SIGHUP handler. `arc-swap` rides in transitively via
# siphon-rs's sip-transport, but we declare it explicitly here so we
# can name the type.
arc-swap = "1"

# Upstream — forge-media (session manager, media bridge).
forge-core.workspace   = true
forge-engine.workspace = true
forge-rtp.workspace    = true

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt", "time", "net", "sync"] }
tempfile     = "3"

# Debian package (`cargo deb -p siphon-ai`). Installs the static binary,
# a default conffile, both licenses + README as docs, and a systemd unit
# (enabled but not started — the operator edits the config first). The
# siphon-ai service user + /var/{lib,log}/siphon-ai are created in the
# maintainer scripts (pkg/postinst); cargo-deb injects the systemd
# helper at each #DEBHELPER# marker.
[package.metadata.deb]
maintainer = "SiphonAI contributors <noreply@github.com>"
copyright = "2026 SiphonAI contributors. Dual-licensed MIT OR Apache-2.0."
license-file = ["../../LICENSE-APACHE", "0"]
section = "net"
priority = "optional"
# Static musl binary: no shared-lib deps, so cargo-deb's $auto would
# resolve to nothing. Depend explicitly on ca-certificates (system trust
# roots for outbound TLS) and adduser (postinst creates the service
# account with addgroup/adduser; no longer priority:important on Debian
# 13, so packages that use it must depend on it).
depends = "ca-certificates, adduser"
extended-description = """\
SiphonAI is a SIP-to-WebSocket media bridge. It accepts inbound SIP \
calls (as a trunk endpoint or a registered phone), streams the call \
audio over a WebSocket to a developer-supplied server, and plays \
returned audio back into the call. It contains no AI code — running \
the AI (STT/LLM/TTS) is the WebSocket server's job."""
conf-files = ["/etc/siphon-ai/config.toml"]
maintainer-scripts = "pkg/"
assets = [
    ["target/release/siphon-ai", "usr/bin/", "755"],
    ["pkg/config.toml", "etc/siphon-ai/config.toml", "640"],
    ["../../README.md", "usr/share/doc/siphon-ai/README.md", "644"],
    ["../../LICENSE-APACHE", "usr/share/doc/siphon-ai/LICENSE-APACHE", "644"],
    ["../../LICENSE-MIT", "usr/share/doc/siphon-ai/LICENSE-MIT", "644"],
]

[package.metadata.deb.systemd-units]
unit-name = "siphon-ai"
unit-scripts = "pkg/"
# Enable on install so it comes up on boot, but don't start now — the
# default config points at a placeholder ws_url.
enable = true
start = false
