[package]
name        = "siphon-ai-audit"
description = "Signed audit-event stream: admin/security events shipped to a SIEM (HMAC webhook + local JSONL file)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace       = true
async-trait.workspace = true
serde.workspace       = true
serde_json.workspace  = true
chrono.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
# Internal — shared retrying JSON-POST transport (HMAC signing, spool,
# idempotency, delivery metrics) behind the webhook sink.
siphon-ai-http.workspace = true

[dev-dependencies]
parking_lot.workspace = true
tempfile              = "3"
