[package]
name        = "siphon-ai-bridge"
description = "WebSocket bridge: protocol types, connection lifecycle, audio frame plumbing."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace             = true
tokio-tungstenite.workspace = true
futures.workspace           = true
serde.workspace             = true
serde_json.workspace        = true
bytes.workspace             = true
base64.workspace            = true
thiserror.workspace         = true
tracing.workspace           = true
