[package]
name        = "siphon-ai-bridge"
description = "WebSocket bridge: protocol types, connection lifecycle, audio frame plumbing."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace             = true
tokio-tungstenite.workspace = true
futures.workspace           = true
serde.workspace             = true
serde_json.workspace        = true
bytes.workspace             = true
base64.workspace            = true
thiserror.workspace         = true
tracing.workspace           = true

# The STIR/SHAKEN verstat verdict surfaced on `StartMsg.verstat` is the
# `VerificationResult` type — its serde shape IS the wire format, so we
# reuse it rather than duplicate a struct + risk drift. `siphon-ai-security`
# is a pure-types leaf (serde + thiserror only), so this stays acyclic.
siphon-ai-security.workspace = true

# mTLS for the WS bridge leg (W4 Part A). `rustls` is the
# `ClientConfig` we hand to `Connector::Rustls`; `rustls-pemfile`
# parses the operator-supplied PEM cert + key; `webpki-roots` is
# the default CA bundle used when no SPKI pin is configured.
rustls          = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pemfile  = "2"
webpki-roots    = "0.26"
# Used by the custom SPKI ServerCertVerifier to hash the peer's
# Subject Public Key Info — matches the `rustls::CertificateDer`
# parsing surface so we don't pull in an extra X.509 crate.
sha2            = "0.10"

[dev-dependencies]
parking_lot.workspace = true
